--- a/index.html
+++ b/index.html
@@ -286,10 +286,7 @@
                         <p class="pre-wrap lead">Art has always been part of Dila Mania's self identity. From passionately utilizing her skills to provide exemplary photography edits, she has invested her time to hone and expand her photoshop skills to deliver satisfactory works.</p>
                     </div>
                     <div class="col-lg-4 mr-auto">
-                        <p class="pre-wrap lead">Dila Mania's photography skills include, but not limited to the following:
--  Filters to match the photo's mood
--  Retouches to remove anything unwanted
-- Highlights and shadows adjustments to capture and emphasize subject</p>
+                        <p class="pre-wrap lead">Dila Mania's photography skills include, but not limited to the following filters to match the photo's mood, retouches to remove anything unwanted, and highlights plus shadows adjustments to capture and emphasize subject.</p>
                     </div>
                 </div>
             </div>
