--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>Freelancer - Start Bootstrap Theme</title>
+        <title>Dila Mania's Portfolio</title>
         <!-- Font Awesome icons (free version)-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" crossorigin="anonymous"></script>
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -16,7 +16,7 @@
     </head>
     <body id="page-top">
         <nav class="navbar navbar-expand-lg bg-secondary fixed-top" id="mainNav">
-            <div class="container"><a class="navbar-brand js-scroll-trigger" href="#page-top">Dila Mania</a>
+            <div class="container"><a class="navbar-brand js-scroll-trigger" href="#page-top">DM Portfolio</a>
                 <button class="navbar-toggler navbar-toggler-right font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu <i class="fas fa-bars"></i></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
@@ -34,15 +34,19 @@
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets/img/circle-cropped.png" alt="">
                 <!-- Masthead Heading-->
-                <h1 class="masthead-heading mb-0">DILA MANIA</h1>
+                <h1 class="masthead-heading mb-0">Dila Mania</h1>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="pre-wrap masthead-subheading font-weight-light mb-0">Frequently praised as an exceptional photo editor by peers and colleagues. </p>
+                <p class="pre-wrap masthead-subheading font-weight-light mb-0">Frequently praised as exceptional photo editor, illustrator, and graphic designer by peers and clients. </p>
             </div>
         </header>
         <section class="page-section portfolio" id="portfolio">
@@ -53,8 +57,6 @@
                 </div>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
-                    <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Grid Items-->
@@ -277,8 +279,6 @@
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                    <div class="divider-custom-line"></div>
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
@@ -286,7 +286,7 @@
                         <p class="pre-wrap lead">Art has always been part of Dila Mania's self identity. From passionately utilizing her skills to provide exemplary photography edits, she has invested her time to hone and expand her photoshop skills to deliver satisfactory works.</p>
                     </div>
                     <div class="col-lg-4 mr-auto">
-                        <p class="pre-wrap lead">Dila Mania's photography skills include, but not limited to the following filters to match the photo's mood, retouches to remove anything unwanted, and highlights plus shadows adjustments to capture and emphasize subject.</p>
+                        <p class="pre-wrap lead">Dila Mania's photography skills include, but not limited to the following filters to match the photo's mood, retouches to remove anything unwanted, and highlights plus shadows adjustments to capture and emphasize subjects.</p>
                     </div>
                 </div>
             </div>
@@ -299,8 +299,6 @@
                 </div>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
-                    <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Contact Section Content-->
